package Drinks;

import Pizza.Pizza;

public abstract class DrinksDecorator extends Pizza {
    public abstract String getDescription();
}
